[project]
name = "vaiae"
version = "0.1.0"
description = "Vertex AI Agent Engine CLI."
authors = [{ name="Hiroshi Toyama", email="toyama0919@gmail.com" }]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = [
  "ai",
  "vertex-ai",
  "deploy",
  "agent",
  "agent-engine",
  "tool",
  "gcp",
]
requires-python = ">=3.10"
dependencies = [
  "tabulate",
  "google-cloud-aiplatform[adk,agent_engines]",
  "google-adk",
  "click>=7.0",
  "pyyaml"
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.optional-dependencies]
test = [
  "tox",
  "pytest",
  "mock",
]

[project.scripts]
vaiae = "vaiae.commands:main"

[project.urls]
"Homepage" = "https://github.com/toyama0919/vaiae"
